[package]
name = "stm32f469_ibutton"
version = "0.1.0"
edition = "2024"

[dependencies]
# Configured cortex-m with the critical-section feature
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.3"

# Embassy
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.1" }
embassy-stm32 = { version = "0.6.0", features = ["stm32f469ni", "unstable-pac", "time-driver-tim2", "memory-x"] }

# Display & Graphics
embedded-graphics = "0.8"
embedded-hal = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = 2
lto = true
opt-level = "s"